--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,23 @@
 @import url( 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
 @import "reset";
 
-body{
-  background: red;
+$white: #fff;
+$darkBlue: #4453A6;
+$lightBlue: #2ABBEF;
+$orange: #EDCA42;
+$gray: #D4D4D4;
+$blueGray: #B8C6D9;
+
+
+html, body{
+  background: $white;
+  height: 100%;
+}
+
+#home{
+  background: url("/../../public/img/japanMountain.jpg") center center;
+  background-repeat: no-repeat;
+  width: 100%;
+  // height: 100%;
+  display: table;
 }
