--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,4 @@
-@import url( 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
+
 @import "reset";
 
 $white: #fff;
@@ -8,6 +8,10 @@ $orange: #EDCA42;
 $gray: #D4D4D4;
 $blueGray: #B8C6D9;
 
+*, h1, h2, h3, h4, h5, h6, p, span, div{
+  box-sizing: border-box;
+  color: white;
+}
 
 html, body{
   background: $white;
@@ -15,9 +19,33 @@ html, body{
 }
 
 #home{
-  background: url("/../../public/img/japanMountain.jpg") center center;
+  background: url("https://www.roadaffair.com/wp-content/uploads/2017/12/bali-indonesia-shutterstock_631736717.jpg") center center;
   background-repeat: no-repeat;
   width: 100%;
-  // height: 100%;
-  display: table;
+  height: 100%;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.welcomeBox{
+  background: rgba(0, 0, 0, .4);
+  padding: 40px 15px;
+  text-align: center;
+  h1{
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    font-weight: 100;
+    text-transform: uppercase;
+  }
+}
+.btn{
+  width: 100%;
+  padding: 10px 20px;
+  text-align: center;
+  margin: 15px 0;
+  &.lightBlue{
+    font-size: 25px;
+    background: $lightBlue;
+  }
 }
