committing change from "build a responsive web app" -"build the header"(video 3)  this was a short commit because i forgot to commit after the second video

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -77,8 +77,8 @@ html, body{
       background: black;
       border-radius: 50%;
       position: absolute;
-      right: 25;
-      top: 200px;
+      right: 25px;
+      top: 125px;
       padding: 10px;
       .fas{
         color: $lightBlue;
