--- a/assets/sass/_allTasks.scss
+++ b/assets/sass/_allTasks.scss
@@ -1,73 +1,90 @@
 
 
 #allTasks{
-    .header{
-      background: url("https://www.roadaffair.com/wp-content/uploads/2017/12/bali-indonesia-shutterstock_631736717.jpg") center center;
-      background-repeat: no-repeat;
-      width: 100%;
-      // height: 300px;
-      background-size: cover;
-      color: white;
-      .top{
-        background: rgba(68,83,166,.7);
-        padding: 50px 15px;
-        text-align: right;
-      }
-      .logo{
-        font-family: 'Megrim', cursive;
-        font-size: 36px;
-        float: left;
-      }
-      .taskTotal{
-        position: relative;
-        top: -20px;
-        .task{
-          display: inline-block;
-          margin: 0 5px 0 0;
-          .number{
-            color: rgb(190, 146, 211);
-            font-weight: 100;
-            font-size: 60px;
-            margin: 0 3px 0 0;
-            position: relative;
-            top: 15px;
-          }
-        }
-      }
-      .addCircle{
-        background: black;
-        border-radius: 50%;
-        position: absolute;
-        right: 25px;
-        top: 131px;
-        padding: 10px;
-        .fas{
-          color: #2ABBEF;
-          font-size: 37px;
+  .header{
+    background: url("https://www.roadaffair.com/wp-content/uploads/2017/12/bali-indonesia-shutterstock_631736717.jpg") center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    // height: 300px;
+    background-size: cover;
+    color: white;
+    .top{
+      background: rgba(68,83,166,.7);
+      padding: 50px 15px;
+      text-align: right;
+    }
+    .logo{
+      font-family: 'Megrim', cursive;
+      font-size: 36px;
+      float: left;
+    }
+    .taskTotal{
+      position: relative;
+      top: -20px;
+      .task{
+        display: inline-block;
+        margin: 0 5px 0 0;
+        .number{
+          color: rgb(190, 146, 211);
+          font-weight: 100;
+          font-size: 60px;
+          margin: 0 3px 0 0;
+          position: relative;
+          top: 15px;
         }
       }
     }
-    .contentArea{
-      color: red;
-      width: 100%;
-      .tasksContainer{
-        margin: 40px 0;
-        .taskBox{
-          padding: 20px;
-          border-bottom: 2px solid #E6E5E3;
-          margin: 0 0 20px 0;
-          .title{
-  
-          }
+    .addCircle{
+      background: black;
+      border-radius: 50%;
+      position: absolute;
+      right: 25px;
+      top: 131px;
+      padding: 10px;
+      .fas{
+        color: #2ABBEF;
+        font-size: 37px;
+      }
+    }
+  }
+  .contentArea{
+    color: red;
+    width: 100%;
+    .tasksContainer{
+      margin: 40px 0;
+      .taskBox{
+        padding: 20px;
+        border-bottom: 2px solid #E6E5E3;
+        margin: 0 0 20px 0;
+        background: white;
+        position: relative;
+        .title{
+          color: black;
+          font-size: 24px;
+          margin: 0 0 6px 0;
+        }
+        .date{
+          color: #afafaf;
+          font-size: 14px;
+        }
+        .checkBox{
+          padding: 3px;
+          border-radius: 10px;
+          border: 3px solid $darkBlue;
+          display: inline-block;
+          position: absolute;
+          top: 17px;
+          right: 25px;
+          font-size: 32px;
+          color: $darkBlue;
         }
       }
     }
   }
-
+}
   
 .container{
   display: block;
   max-width: 1200px;
-  background: white;
   margin: 0 auto;
 }
