adding files completed in last video (code the content area)

--- a/assets/sass/_allTasks.scss
+++ b/assets/sass/_allTasks.scss
@@ -81,6 +81,13 @@
       }
     }
   }
+  .taskForm{
+    background: $darkBlue;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    bottom: 0;
+  }
 }
   
 .container{
