--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,7 @@
 
 @import "reset";
-@import "home.scss";
-@import "alltasks.scss";
+@import "home";
+@import "allTasks";
 
 $white: #fff;
 $darkBlue: #4453A6;
